Change box overflow to hidden This prevents it from dynamically resizing the grid when text wraps

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,7 @@ body{
     font-size: 100px;
     grid-row: span 2;
     grid-column: span 3;
+    overflow: hidden;  
 }
 
 .box.bottom{
